# rivi-mobile

./: README.md
ios/: Cargo.toml  README.md
ios/src/: lib.rs
ios/src/xcode/rivi-mobile/: ContentView.swift  rivi_mobileApp.swift
ios/src/xcode/rivi-mobile.xcodeproj/: project.pbxproj
ios/src/xcode/rivi-mobile/rust/: Rust-Bridging-Header.h  Swift-Bridge.swift
